# module-sample

./: CMakeLists.txt  README.md  README.org
include/: libsample.h
src/: CMakeLists.txt  plain.c
zephyr/: CMakeLists.txt  Kconfig
